Fixed spacing issue with select elements in tight form and color issue in dark form.

--- a/less/components/form.less
+++ b/less/components/form.less
@@ -193,6 +193,7 @@ form.form-tight .input-container.file,
 form.form-tight .input-container.checkbox,
 form.form-tight .input-container.radio {
 	padding: 10px 0 10px 0;
+	color: @white;
 }
 
 form.form.dark label {
@@ -387,7 +388,7 @@ form.form.dark label {
 	}
 	
 	form.form-tight .input-container.select select {
-		margin: 10px 0 0 0;
+		margin: 10px auto 0 auto;
 	}
 }
 
